<resources>
    <string name="app_name">Bootcampgroupc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="stay_high">Stay High.</string>
    <string name="stay_happy">Stay Happy.</string>
    <string name="always">Always.</string>
    <string name="join">Join</string>
    <string name="log_in">Log In</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="address">Address:</string>
    <string name="e_mail">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="name_tit">Name:</string>
    <string name="fullname">Fullname</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail_2">E-mail</string>
    <string name="address_2">Address</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="upload_p_cture">Upload Pıcture</string>
    <string name="blank" />
    <string name="default_web" translatable="false">1093143162319-vr6cgmv68fbf1ohkef5anmvplss34bke.apps.googleusercontent.com</string>

    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for login -->
    <string name="login">Login</string>
    <string name="create_your_account">Create your account</string>
    <string name="terms">By creating an account you agree with our<a href="https://bootcamp-group-c.flycricket.io/privacy.html">
        terms and conditions</a></string>
    <string name="login_btn">Login</string>
    <string name="not_valid_email">Email is invalid</string>
    <string name="uppercase">Password must include at least one capital letter</string>
    <string name="lowercase">Password must include at least one small letter</string>
    <string name="number">Password must include at least one number</string>
    <string name="special">Password must include at least one special character</string>
    <string name="password_too_short">Password is too short</string>
    <string name="password_too_long">Password is too long</string>
    <string name="password_is_required">Password is required</string>
    <string name="email_is_required">Email is required</string>

    <string name="grower_name">Grower Name</string>
    <string name="field_is_required"> This field is required</string>
    <string name="field_is_too_short"> Text length is too short</string>
    <string name="description">Description</string>
    <string name="price_gram">Price / Gram</string>
    <string name="thc_rate">THC rate</string>
    <string name="cbd_rate">CBD rate</string>
    <string name="add">Add</string>
    <string name="flowers">Flowers</string>
    <string name="vapes">Vapes</string>
    <string name="extracts">Extracts</string>
    <string name="edibles">Edibles</string>
    <string name="accessories">Accessories</string>


    <string-array name="Categories">
        <item>Flowers</item>
        <item>Vapes</item>
        <item>Extracts</item>
        <item>Edibles</item>
        <item>Accessories</item>
    </string-array>

</resources>