<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOnboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/onboard_animation"
        tools:context=".ui.onboard.OnboardFragment">

        <ImageView
            android:id="@+id/ivOnboardLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_logo_onboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tvStayHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/stay_high"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivOnboardLogo" />

        <TextView
            android:id="@+id/tvStayHappy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/stay_happy"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStayHigh" />

        <TextView
            android:id="@+id/tvAlways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/always"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStayHappy" />

        <Button
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvAlways"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bLogin"
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/bJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="none"
            android:background="@drawable/onboard_join_background"
            android:text="@string/join"
            android:textColor="#81AA66" />

        <Button
            android:textAllCaps="false"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvAlways"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bJoin"
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/bLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="none"
            android:background="@drawable/onboard_login_background"
            android:text="@string/log_in"
            android:textColor="#FFFFFF" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/ibGoogle"
            app:layout_constraintTop_toBottomOf="@+id/bJoin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/continue_with_google"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp"
            android:drawableLeft="@drawable/ic_google_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSign"
            app:layout_constraintTop_toTopOf="@+id/ibGoogle"
            app:layout_constraintStart_toStartOf="@id/ibGoogle"
            app:layout_constraintEnd_toEndOf="@id/ibGoogle"
            app:layout_constraintBottom_toBottomOf="@id/ibGoogle"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="0dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>