<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".ui.profile.ProfileEditFragment">

        <Button
            android:id="@+id/uploadButton"
            android:background="@drawable/profile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="186dp"
            android:text="@string/upload_p_cture"
            android:textSize="@dimen/_8sdp"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintTop_toTopOf="@id/profileImage"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="2dp"
            app:civ_border_color="#81AA66"
            android:id="@+id/profileImage"
            app:layout_constraintTop_toBottomOf="@id/updateProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_150sdp"
            android:src="@drawable/profile_pic"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_50sdp" />

        <TextView
            android:id="@+id/updateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/update_your_profile"
            android:textColor="#81AA66"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:id="@+id/name"
            android:background="@drawable/profile_back"
            android:hint="@string/fullname"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/updateProfile"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_100sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:id="@+id/phone"
            android:inputType="phone"
            android:background="@drawable/profile_back"
            android:hint="@string/phone_number"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/profile_back"
            android:gravity="center_vertical"
            android:hint="@string/address_2"
            android:minHeight="@dimen/_80sdp"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>