<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.bootcampteamc.odev.ui.home.addproduct.AddProductViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemsConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_take_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/growerName"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:error="@{viewModel.growerNameErrorMessage}"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:maxLength="10"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20sp"
                    android:backgroundTint="#E8E8E8"
                    android:hint="@string/grower_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.growerName}"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:selectedItemPosition="@={viewModel.category}"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
                app:error="@{viewModel.nameErrorMessage}"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:hint="Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:backgroundTint="#E8E8E8"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.name}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:hint="@string/description"
                    android:backgroundTint="#E8E8E8"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.description}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20sp"
                    android:backgroundTint="#E8E8E8"
                    android:hint="@string/price_gram"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.price}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/thcText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E8E8E8"
                    android:hint="@string/thc_rate"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.thc}"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cbdText"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/black"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E8E8E8"
                    android:hint="@string/cbd_rate"
                    android:inputType="numberDecimal"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.cbd}"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:onClick="@{() -> viewModel.onAddButtonClick()}"
                android:id="@+id/addButton"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20sp"
                android:backgroundTint="#E5E5E5"
                android:padding="12dp"
                android:text="@string/add"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbdText"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
